# mcp-uof

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-TW.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  design.md  example-session.md  form-requirements.md  integration.md  testing.md  tools.md  web-apply-design.md
examples/: claude_desktop_config.json  vscode_mcp.json
scripts/: fetch_all_wsdls.py  generate_keys.py  generate_no_plus_key.py
src/mcp_uof/: __init__.py  _log.py  server.py  soap_client.py  sse_server.py
src/mcp_uof/auth/: __init__.py  base.py  session.py  token.py
src/mcp_uof/domains/: __init__.py
src/mcp_uof/domains/dms/: __init__.py  endpoints.py
src/mcp_uof/domains/eip/: __init__.py  endpoints.py
src/mcp_uof/domains/system/: __init__.py  endpoints.py  tools.py
src/mcp_uof/domains/uchat/: __init__.py  endpoints.py
src/mcp_uof/domains/wkf/: __init__.py  endpoints.py  service.py
src/mcp_uof/ops/: __init__.py  base.py  http_web.py  router.py  soap.py  web.py
src/mcp_uof/ops/web_apply/: __init__.py  base.py  helpers.py  purchase_order.py  registry.py  router.py
tests/: README.md  _common.py  run.py
tests/e2e/: test_wkf_purchase_order.py
tests/mounted/: _client.py  test_mcp_stdio.py
tests/smoke/: test_auth_binding.py  test_binding.py  test_form_xml.py  test_http_web_regressions.py  test_imports.py  test_routing.py  test_web_apply_dialog.py
